Fixed indentation and removed unused code (code review)

--- a/code/style.css
+++ b/code/style.css
@@ -28,12 +28,12 @@ p {
   font-size: 14px;
   color: #7d3838;
   line-height: 20px;
-  /* margin-top: 7px; */
   margin: 10px;
   text-decoration: underline;
 }
 
 /*** HEADER ***/
+
 nav {
   padding: 5px 30px;
   background: #1d3545;
@@ -55,7 +55,7 @@ nav ul li.logo {
   font-family: Rochester, sans-serif;
   cursor: default;
   user-select: none; /* this element cannot be selected*/
-  text-align: center; /*new*/
+  text-align: center;
 }
 
 nav ul li.items {
