made sure that mobile has no horizontal scroll

--- a/code/styles/largeScreen.css
+++ b/code/styles/largeScreen.css
@@ -9,7 +9,8 @@ body {
     "news-boxes news-column"
     "news-list news-column"
     "footer footer";
-  width: 1160px;
+  /* width: 1160px; */
+  margin: 0 10%;
 }
 
 /* NEWS BOXES */
