--- a/code/styles/mediumScreen.css
+++ b/code/styles/mediumScreen.css
@@ -2,7 +2,7 @@
 /* Device specific styling and layout */
 
 body {
-  grid-template-rows: 200px 15% auto auto auto 200px;
+  grid-template-rows: auto 15% auto auto auto 200px;
   min-width: 743px;
 }
 
