code review changes added

--- a/code/style.css
+++ b/code/style.css
@@ -45,6 +45,7 @@ img {
   width: 100%;
   height: 250px;
   max-width: 383px;
+  object-fit: cover;
 }
 
 /**************** HEADER *****************/
