--- a/code/style.css
+++ b/code/style.css
@@ -7,12 +7,10 @@ main, header, section, aside, footer {
   text-align: center;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 24px;
-/*     border: 1px solid #000000; */
 }
 
 main {
   background: #C8D2D8;
-
 }
 
 .header {
@@ -27,7 +25,7 @@ main {
   margin-bottom: 20px;
 }
 
-.style {
+.cards {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -140,7 +138,7 @@ border-bottom: 55px solid #fff;
 position: absolute;
 text-align: center;
 width: 100%;
-bottom: 0px;
+bottom: 0;
 font: 400 18px/1 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 color: dimgray;
 }
