--- a/code/style.css
+++ b/code/style.css
@@ -4,14 +4,17 @@ html {
 
 /* HEADER SECTION*/
 
-.navbar {
-  background-color:#bad7df);
+.header-section {
+  margin: 0px 0px 10px 0px
+}
+
+.nav-bar {
   margin: 0px;
   padding-bottom: 0%;
   max-width: 100%;
 }
 
-.titlelogo {
+.title-logo {
   display: flex;
   justify-content: space-evenly;
 }
@@ -87,18 +90,17 @@ html {
   display: flex;
   flex-direction: column;
   width: 100%;
-  align-content: space-around;
+  align-items: center;
   margin-bottom: 10px;
 }
 
 .news-card {
-  /* display: flex; */
   color: darkcyan;
   background-color: #bad7df;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   padding: 20px 30px;
   border: 3px solid darkmagenta;
-  margin: 20px;
+  margin: 0px 10px 10px 0px;
   width: 80%;
   text-align: center;
   box-shadow: 0px 8px 3px -8px #111, 
@@ -115,7 +117,6 @@ html {
 }
 
 .news-card p {
-  /* max-width: 50%; */
   font-size: 16px;
 }
 
@@ -130,6 +131,7 @@ html {
   background-color: #bad7df;
   color: white;
   text-align: center;
+  font-weight: bold;
 }
 
 
@@ -143,7 +145,7 @@ html {
     margin: auto;
   }
 
-  .navbar {
+  .nav-bar {
     display: flex;
   }
 
@@ -153,13 +155,13 @@ html {
     max-width: 40%;
   }
 
-.titlelogo {
-  width: 100%;
-}
- 
-.main-heading {
-  font-size: 35px;
-}
+  .title-logo {
+    width: 100%;
+  }
+  
+  .main-heading {
+    font-size: 35px;
+  }
 
   .nav-menu p {
     margin-right: 15px;
@@ -189,6 +191,8 @@ html {
   }
   .news-card {
     width: 250px;
+    height: 250px;
+    margin-right: 10px;
   }
 }
 
@@ -235,7 +239,7 @@ html {
     margin: 0px 0px 0px 20px;
   }
 
-  .big-news p {
+  .big-news-paragraph {
     margin-top: 30px;
   }
 
@@ -250,6 +254,7 @@ html {
   .news-card {
     justify-content: space-around;
     text-align: center;
+    height: 200px;
   }
 
   .hr1 {
