CHANGES REQUESTED made

--- a/code/style.css
+++ b/code/style.css
@@ -122,12 +122,16 @@ footer p {
 .news-card img {
   width: 100%;
 }
-
 .news-card h2 {
   margin-top: 5px;
   padding: 0px 15px;
   font-weight: 500;
 }
+
+a {
+  border: transparent;
+}
+
 
 
 /*** TABLET ***/
