--- a/code/style.css
+++ b/code/style.css
@@ -125,7 +125,7 @@ a {
   font-size: 20px;
 }
 
-/****************  FOOTER****************/
+/*******************  FOOTER****************/
 .footer {
   display: flex;
   background:rgb(2, 123, 128);
