--- a/code/style.css
+++ b/code/style.css
@@ -16,6 +16,7 @@ body {
 }
 
 /*** HEADER ***/
+
 .header-general {
   background-image: url(./header_picture.jpg);
   background-position: center;
@@ -23,7 +24,10 @@ body {
   background-size: cover;
   padding: 0 10px;
   height: 70px;
+  align-items: center;
+  display: flex;
 }
+
 .nav-link {
   color: rgb(8, 63, 114);
   text-decoration: none;
@@ -31,25 +35,44 @@ body {
   text-shadow: 1px 1px rgb(70, 93, 119);
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
 .logo {
   width: 80px;
   height: 70px;
-
 }
+
 /*** HEADER PHONE ***/
+
 .header-phone {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
+}
+.nav-desktop-tablet {
+  display: none;
+}
+.nav-link {
+  cursor: pointer;
+  z-index: 1;
+  background: rgba(143, 194, 241, 0.651);
+}
+.nav-link:hover {
+  background: rgb(176, 211, 247);
 }
 
+.nav-link:focus {
+  background: rgba(163, 206, 247, 0.979);
+} 
 /*** HEADER PHONE: HAMBURGER ***/
+
 .hamburger-line {
   background: rgb(48, 79, 121);
   height: 4px;
   width: 25px;
   margin: 5px 3px;
 }
+
 /*** HEADER PHONE: DROPDOWN MENU ***/
 
 .dropdown {
@@ -59,6 +82,7 @@ body {
   right: 0;
   margin-left: 150px;
 }
+
 .dropdown-list {
   margin: 0;
   list-style-type: none;
@@ -67,60 +91,39 @@ body {
   transition: all 0.5s;
   text-align: right;
 }
+
 .dropdown .nav-link {
   display: inline-block;
   padding: 12px;
   color: rgb(230, 236, 238);
 }
-.dropdown .nav-link:hover,  .dropdown .nav-link:focus {
+
+.dropdown .nav-link:hover, .dropdown .nav-link:focus {
   background: rgba(61, 141, 187, 0.842);
 }
+
 input#hamburger {
   display: none;
 }
-input:checked ~ .dropdown .dropdown-list {
-    max-height: 200px;
-    transition: all 0.5s;
+
+input:checked~.dropdown .dropdown-list {
+  max-height: 200px;
+  transition: all 0.5s;
 }
+
 .label {
   cursor: pointer;
 }
-/*** HEADER Desktop view***/
-.header-desktop {
-  display: none;
-  align-items: center;
-  justify-content: space-between;
-  color:rgb(143, 194, 241)
-}
 
-.nav-link:hover {
-  background: rgb(176, 211, 247);
-}
-/*** HEADER Tablet view ***/
-.header-tablet {
-  display: none;
-}
-.nav-tablet {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.nav-tablet .nav-link {
-  margin: 0 15px;
-}
-
-.nav-tablet .nav-link:focus {
-  background:rgba(163, 206, 247, 0.979);
-}
 
 /*** BIG NEWS ***/
 
-.big-news .container{
+.big-news .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 30px 16px;
-  box-sizing: border-box; 
+  box-sizing: border-box;
 }
 
 .bignews-image {
@@ -135,19 +138,23 @@ input:checked ~ .dropdown .dropdown-list {
 .bignews-para2 {
   display: none;
 }
+
 .bignews-para1 {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-weight: bold;
   color: rgb(218, 232, 248);
   font-size: 1.1em;
 }
-.read-more{
+
+.read-more {
   text-decoration: none;
   color: rgb(3, 36, 58);
 }
+
 .read-more:hover, .read-more:focus {
-  background:#fff;
+  background: #fff;
 }
+
 /*** HIGHLIGHTS ***/
 
 .big-headline {
@@ -156,7 +163,6 @@ input:checked ~ .dropdown .dropdown-list {
   margin-left: 10px;
   display: inline-block;
   padding: 5px;
-
 }
 
 .grid-container {
@@ -165,6 +171,7 @@ input:checked ~ .dropdown .dropdown-list {
   grid-auto-rows: minmax(150px, auto);
   padding: 0px 10px;
 }
+
 .each-highlight {
   background-position: center;
   background-repeat: no-repeat;
@@ -178,51 +185,63 @@ input:checked ~ .dropdown .dropdown-list {
   border: 1px solid rgba(0, 0, 0, 0);
   text-decoration: none;
 }
+
 .each-highlight:hover, .each-highlight:focus {
   border: 1px solid rgb(255, 255, 255);
 }
+
 .highlight1 {
   background-image: url(./reindeer.jpg);
 }
+
 .highlight2 {
   background-image: url(./fox.jpg);
 }
+
 .highlight3 {
   background-image: url(./plastics.jpg);
 }
+
 .highlight4 {
   background-image: url(./oil.jpg);
 }
+
 .highlight-headline, .highlight-credits {
-  background:rgba(255, 255, 255, 0.423);
+  background: rgba(255, 255, 255, 0.423);
   margin: 0;
   padding: 3px;
 }
+
 .highlight-credits {
   font-size: 12px;
 }
+
 /*** ODINARY NEWS ***/
+
 .ordinary-news a {
   text-decoration: none;
   color: #fff
 }
+
 .each-news {
   display: flex;
   padding: 10px;
 }
+
 .ordinarynews-headline {
   padding: 0;
   margin-top: 0px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: normal;
 }
+
 .ordinarynews-image {
   width: 40%;
   height: auto;
   margin-right: 10px;
   align-self: flex-start;
-
 }
+
 .news {
   display: flex;
   justify-content: center;
@@ -230,6 +249,7 @@ input:checked ~ .dropdown .dropdown-list {
 }
 
 /*** FOOTER ***/
+
 .footer-general {
   display: flex;
   flex-direction: column;
@@ -237,12 +257,13 @@ input:checked ~ .dropdown .dropdown-list {
   background: rgb(55, 72, 94);
   margin-top: 20px;
   width: 100%;
-
 }
+
 .logo-footer {
   width: 150px;
   height: 140px;
 }
+
 .footer-list {
   margin: 0px;
   padding-bottom: 10px;
@@ -250,11 +271,13 @@ input:checked ~ .dropdown .dropdown-list {
   flex-direction: column;
   align-items: center;
 }
+
 .footer-link {
-  text-decoration:none;
+  text-decoration: none;
   color: rgb(215, 235, 248);
   padding-bottom: 5px;
 }
+
 .footer-link:hover, .footer-link:focus {
   background: rgba(59, 81, 128, 0.774);
 }
@@ -265,7 +288,9 @@ input:checked ~ .dropdown .dropdown-list {
   margin-bottom: 10px;
   align-items: center;
 }
+
 /*** FOOTER: Subscribe button ***/
+
 .subscribe-button {
   background: rgb(69, 103, 146);
   border: none;
@@ -282,11 +307,14 @@ input:checked ~ .dropdown .dropdown-list {
 .subscribe-button:hover, .subscribe-button:focus {
   background: rgb(92, 123, 165);
 }
+
 .subscribe-button:active {
   box-shadow: 0 3px rgba(197, 211, 252, 0.404);
   transform: translateY(2px);
 }
+
 /*** FOOTER: Social media icons ***/
+
 .fa {
   padding: 10px;
   font-size: 30px;
@@ -295,52 +323,68 @@ input:checked ~ .dropdown .dropdown-list {
   text-decoration: none;
   margin: 5px 2px;
 }
+
 .fa:hover {
   opacity: 0.7;
 }
+
 .fa-facebook, .fa-twitter, .fa-linkedin, .fa-instagram {
   color: #fff;
   text-decoration: none;
-  background:rgb(105, 144, 180);
+  background: rgb(105, 144, 180);
 }
 
 /*** FOOTER: copyright section  ***/
+
 .footer-copyright {
   text-align: center;
   font-size: 12px;
   background: rgb(9, 38, 68);
   height: 40px;
 }
+
 .copyright-text {
   margin: 0px;
   padding-top: 10px;
 }
 
 /*** MEDIA QUERIES ***/
- @media (min-width: 650px) {
-  .nav-link{
-    background:rgba(143, 194, 241, 0.651);
-  }
 
+@media (min-width: 650px) {
   .header-phone {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+  }
+  .nav-desktop-tablet {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+  }
+  .checkbox {
     display: none;
   }
-  .header-tablet {
-    display: inline;
-  } 
 
+  .logo-wrapper {
+    position: absolute;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   /** Media-tablet: Big-news section styling **/
   .big-news .container {
-     text-align: left;
+    text-align: left;
   }
   .bignews-image {
     box-shadow: 0 4px 9px rgba(154, 215, 250, 0.91);
   }
-  .bignews-image:hover, .bignews-image:focus  {
+  .bignews-image:hover, .bignews-image:focus {
     box-shadow: 0 4px 9px rgba(214, 238, 252, 0.91);
   }
   /** Media-tablet: Highlights section styling **/
-
   .grid-container {
     grid-template-columns: 1fr 1fr 1fr;
   }
@@ -350,16 +394,15 @@ input:checked ~ .dropdown .dropdown-list {
   .highlight2 {
     grid-column: 2/4;
   }
-
   .news {
     flex-wrap: wrap;
-    flex-direction: row; 
+    flex-direction: row;
+    justify-content: space-between;
   }
   .each-news {
-     width: 40%;
-     margin: 0 15px;
-     align-items: top;
-     flex-direction: column;
+    width: 45%;
+    align-items: top;
+    flex-direction: column;
   }
   .ordinarynews-image {
     width: 100%;
@@ -372,7 +415,7 @@ input:checked ~ .dropdown .dropdown-list {
   .each-news:hover {
     transform: scale(1.1);
   }
-      /** Footer styling*/
+  /** Footer styling*/
   .footer-general {
     flex-direction: row;
     justify-content: space-around;
@@ -383,32 +426,44 @@ input:checked ~ .dropdown .dropdown-list {
   .footer-column {
     align-items: flex-start;
   }
- }
+}
 
-
- @media (min-width: 900px) {
+@media (min-width: 900px) {
   .header-phone {
-    display: none;
-  }
-  .header-desktop {
     display: flex;
-  } 
-  .header-tablet {
-    display: none;
-  } 
+    justify-content: space-between;
+    width: 100%;
+    position: static;
+  }
+  .nav-desktop-tablet {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: auto;
+  }
+  .logo-wrapper {
+    width: auto;
+    position: static;
+  }
+
+  .nav-link {
+    margin: 10px;
+  }
+  
   .big-news .container {
-     flex-direction: row;
-     align-items: top;
-     justify-content: center;
-   }
+    flex-direction: row;
+    align-items: top;
+    justify-content: center;
+  }
   .bignews-image {
-     width: 50%;
-     margin-right: 30px;
+    width: 50%;
+    margin-right: 30px;
   }
   .bignews-para1, .bignews-para2 {
     display: block;
   }
   .news {
     flex-wrap: nowrap;
+    justify-content: space-between;
   }
- }
+}
